[package]
authors = ["Yiwei Yang <victoryang00@ucsc.edu>"]
edition = "2021"
name = "ioring-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
features = [
  "Win32_Storage_FileSystem",
  "Win32_Storage",
  "Win32_Foundation"
]
git = "https://github.com/victoryang00/windows-rs"
branch="master"

[dependencies]
xmmap = {git = "https://github.com/LemonHX/xmmap"}
bitflags = "1.3.2"